--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -82,6 +82,27 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>create-deployment</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>src/main/assembly/sql.xml</descriptor>
+                            </descriptors>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <executions>
                     <execution>
@@ -199,6 +220,13 @@
                     <plugin>
                         <groupId>com.hellblazer</groupId>
                         <artifactId>pljava-loader</artifactId>
+                        <dependencies>
+                            <dependency>
+                                <groupId>postgresql</groupId>
+                                <artifactId>postgresql</artifactId>
+                                <version>${postgresql.driver.version}</version>
+                            </dependency>
+                        </dependencies>
                         <configuration>
                             <jdbcUrl>jdbc:postgresql://${testing.db.server}:${testing.db.port}/core</jdbcUrl>
                             <username>${testing.db.login}</username>
@@ -224,6 +252,13 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>sql-maven-plugin</artifactId>
+                        <dependencies>
+                            <dependency>
+                                <groupId>postgresql</groupId>
+                                <artifactId>postgresql</artifactId>
+                                <version>${postgresql.driver.version}</version>
+                            </dependency>
+                        </dependencies>
                         <executions>
                             <execution>
                                 <id>set-classpath</id>
@@ -239,52 +274,6 @@
                                     <autocommit>true</autocommit>
                                     <sqlCommand>SELECT sqlj.set_classpath('ruleform',
                                         '${pljavaClassPath}');</sqlCommand>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>generate-sql-init</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.liquibase</groupId>
-                        <artifactId>liquibase-maven-plugin</artifactId>
-                        <configuration>
-                            <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
-                            <driver>org.postgresql.Driver</driver>
-                            <url>jdbc:postgresql://${testing.db.server}:${testing.db.port}/core</url>
-                            <username>${testing.db.login}</username>
-                            <password>${testing.db.password}</password>
-                            <changeLogFile>${main.sql}/com/chiralbehaviors/CoRE/schema/ruleform/animations.xml</changeLogFile>
-                            <verbose>false</verbose>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>generate update</id>
-                                <phase>process-sources</phase>
-                                <goals>
-                                    <goal>updateSQL</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-assembly-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>create-deployment</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>single</goal>
-                                </goals>
-                                <configuration>
-                                    <descriptors>
-                                        <descriptor>src/main/assembly/sql.xml</descriptor>
-                                    </descriptors>
                                 </configuration>
                             </execution>
                         </executions>
