--- a/model/pom.xml
+++ b/model/pom.xml
@@ -94,6 +94,27 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>create-deployment</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>src/main/assembly/sql.xml</descriptor>
+                            </descriptors>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <version>1.8</version>
@@ -376,6 +397,13 @@
                     <plugin>
                         <groupId>com.hellblazer</groupId>
                         <artifactId>pljava-loader</artifactId>
+                        <dependencies>
+                            <dependency>
+                                <groupId>postgresql</groupId>
+                                <artifactId>postgresql</artifactId>
+                                <version>${postgresql.driver.version}</version>
+                            </dependency>
+                        </dependencies>
                         <configuration>
                             <jdbcUrl>${jdbc.url}</jdbcUrl>
                             <username>${testing.db.login}</username>
@@ -417,64 +445,6 @@
                                     <sqlCommand>SELECT sqlj.set_classpath('ruleform',
                                         '${pljavaClassPath}');</sqlCommand>
                                 </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>generate-sql-init</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-assembly-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>create-deployment</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>single</goal>
-                                </goals>
-                                <configuration>
-                                    <descriptors>
-                                        <descriptor>src/main/assembly/sql.xml</descriptor>
-                                    </descriptors>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.liquibase</groupId>
-                        <artifactId>liquibase-maven-plugin</artifactId>
-                        <dependencies>
-                            <dependency>
-                                <groupId>postgresql</groupId>
-                                <artifactId>postgresql</artifactId>
-                                <version>${postgresql.driver.version}</version>
-                            </dependency>
-                            <dependency>
-                                <groupId>org.apache.derby</groupId>
-                                <artifactId>derby</artifactId>
-                                <version>10.10.1.1</version>
-                            </dependency>
-                        </dependencies>
-                        <configuration>
-                            <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
-                            <driver>${jdbc.driver}</driver>
-                            <url>${jdbc.url}</url>
-                            <username>${testing.db.login}</username>
-                            <password>${testing.db.password}</password>
-                            <changeLogFile>${main.sql}/com/chiralbehaviors/CoRE/schema/core.xml</changeLogFile>
-                            <verbose>false</verbose>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>generate update</id>
-                                <phase>process-sources</phase>
-                                <goals>
-                                    <goal>updateSQL</goal>
-                                </goals>
                             </execution>
                         </executions>
                     </plugin>
