Move to a custom sequence generator to maintain semantics on primary key existence.  Encode UUIDs as base 64, msb first.  Fix semantics around get/set ID.

--- a/pom.xml
+++ b/pom.xml
@@ -490,6 +490,7 @@
                                 <exclude>classworlds:classworlds</exclude>
                             </excludes>
                         </artifactSet>
+                        <generateUniqueDependencyReducedPom>true</generateUniqueDependencyReducedPom>
                     </configuration>
                     <executions>
                         <execution>
