--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.fasterxml.jackson.dataformat</groupId>
+                <artifactId>jackson-dataformat-yaml</artifactId>
+                <version>2.2.2</version>
+            </dependency>
+            <dependency>
                 <groupId>com.chiralbehaviors.CoRE</groupId>
                 <artifactId>animations</artifactId>
                 <version>${project.version}</version>
@@ -468,6 +473,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
+                    <version>2.3</version>
                     <configuration>
                         <createDependencyReducedPom>true</createDependencyReducedPom>
                         <filters>
