Incremental progress on the loader testing.

--- a/loader/pom.xml
+++ b/loader/pom.xml
@@ -45,6 +45,15 @@
             <groupId>com.hellblazer</groupId>
             <artifactId>utils</artifactId>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
