more incremental work on loader.  unpack create/delete resources, rather than replicating them.  Rely on liquibase create of database and roles.
Finding I have to call out schema in this loading strategy.  Will have
to see why that's all effed up in the loads of the modules ;)

--- a/loader/pom.xml
+++ b/loader/pom.xml
@@ -18,16 +18,6 @@
         <dependency>
             <groupId>com.chiralbehaviors.CoRE</groupId>
             <artifactId>model</artifactId>
-            <classifier>sql</classifier>
-        </dependency>
-        <dependency>
-            <groupId>com.chiralbehaviors.CoRE</groupId>
-            <artifactId>model</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.chiralbehaviors.CoRE</groupId>
-            <artifactId>animations</artifactId>
-            <classifier>sql</classifier>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
@@ -92,6 +82,53 @@
                             <overWriteSnapshots>true</overWriteSnapshots>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>unpack</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>com.chiralbehaviors.CoRE</groupId>
+                                    <artifactId>model</artifactId>
+                                    <classifier>sql</classifier>
+                                    <version>${project.version}</version>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>${project.build.directory}/classes</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.chiralbehaviors.CoRE</groupId>
+                                    <artifactId>create-database</artifactId> 
+                                    <version>${project.version}</version>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>${project.build.directory}/classes/</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.chiralbehaviors.CoRE</groupId>
+                                    <artifactId>drop-database</artifactId> 
+                                    <version>${project.version}</version>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>${project.build.directory}/classes/</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.chiralbehaviors.CoRE</groupId>
+                                    <artifactId>animations</artifactId>
+                                    <classifier>sql</classifier>
+                                    <version>${project.version}</version>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>${project.build.directory}/classes/</outputDirectory>
+                                </artifactItem>
+                            </artifactItems>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>true</overWriteSnapshots>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
         </plugins>
@@ -112,6 +149,7 @@
                                         <versionRange>[2.8,)</versionRange>
                                         <goals>
                                             <goal>copy</goal>
+                                            <goal>unpack</goal>
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
