--- a/service/src/test/resources/jpa.properties
+++ b/service/src/test/resources/jpa.properties
@@ -1,6 +1,6 @@
-openjpa.ConnectionUserName=${testing.db.login}
-openjpa.ConnectionPassword=${testing.db.password}
-openjpa.ConnectionURL=jdbc:postgresql://${testing.db.server}:${testing.db.port}/${testing.db.database}
+openjpa.ConnectionUserName=${db.login}
+openjpa.ConnectionPassword=${db.password}
+openjpa.ConnectionURL=jdbc:postgresql://${db.server}:${db.port}/${db.database}
 openjpa.ConnectionDriverName=org.postgresql.Driver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
 openjpa.jdbc.TransactionIsolation=repeatable-read
