--- a/loader/src/test/resources/loader.yml
+++ b/loader/src/test/resources/loader.yml
@@ -1,8 +1,10 @@
-jdbcUrl: jdbc:postgresql://${testing.db.server}:${testing.db.port}/postgres
-username: ${testing.db.password}
-password: ${testing.db.login}
+dbaServer: ${testing.db.server}
+dbaPort: ${testing.db.port}
+dbaUsername: ${testing.db.password}
+dbaPassword: ${testing.db.login}
 
-coreJdbcUrl: jdbc:postgresql://${db.server}:${db.port}/core
+coreServer: ${db.server}
+corePort: ${db.port}
 coreUsername: ${db.login}
 corePassword: ${db.password}
 
