Fix dependencies.  create seperate artifact for phat animations for loading.

--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -83,6 +83,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
+                <configuration>
+                    <shadedArtifactAttached>true</shadedArtifactAttached>
+                    <shadedClassifierName>phat</shadedClassifierName>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
