--- a/loader/pom.xml
+++ b/loader/pom.xml
@@ -72,6 +72,7 @@
                                 <artifactItem>
                                     <groupId>com.chiralbehaviors.CoRE</groupId>
                                     <artifactId>animations</artifactId>
+                                    <classifier>phat</classifier>
                                     <version>${project.version}</version>
                                     <type>jar</type>
                                     <overWrite>true</overWrite>
@@ -101,7 +102,7 @@
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.chiralbehaviors.CoRE</groupId>
-                                    <artifactId>create-database</artifactId> 
+                                    <artifactId>create-database</artifactId>
                                     <version>${project.version}</version>
                                     <type>jar</type>
                                     <overWrite>true</overWrite>
@@ -109,7 +110,7 @@
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.chiralbehaviors.CoRE</groupId>
-                                    <artifactId>drop-database</artifactId> 
+                                    <artifactId>drop-database</artifactId>
                                     <version>${project.version}</version>
                                     <type>jar</type>
                                     <overWrite>true</overWrite>
