remove extraneous coordinate ruleforms.  Add inference FK to all networks.  Generate network inference queries JPA xml (fuck yea).

--- a/loader-plugin/pom.xml
+++ b/loader-plugin/pom.xml
@@ -63,7 +63,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <goalPrefix>pljava-loader</goalPrefix>
+                    <goalPrefix>loader</goalPrefix>
                 </configuration>
             </plugin>
         </plugins>
