--- a/network-inference-generator/pom.xml
+++ b/network-inference-generator/pom.xml
@@ -7,19 +7,15 @@
         <artifactId>CoRE.app</artifactId>
         <version>0.0.2-SNAPSHOT</version>
     </parent>
-    <artifactId>mixin-generator</artifactId>
-    <name>Polymorphic Mixin Generator</name>
+    <artifactId>network-inference-generator</artifactId>
     <packaging>maven-plugin</packaging>
-    <description>Source generator for the PolymorphicMixin class</description>
+    <name>Network Inference Query Generator</name>
+    <description>A template generator for the network inference queries</description>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.chiralbehaviors.CoRE</groupId>
-            <artifactId>model</artifactId>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -33,6 +29,11 @@
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -49,7 +50,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <goalPrefix>mixin-generator</goalPrefix>
+                    <goalPrefix>network-inference-generator</goalPrefix>
                 </configuration>
             </plugin>
         </plugins>
