--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
         <module>json</module>
         <module>loader</module>
         <module>loader-plugin</module>
+        <module>network-inference-generator</module>
     </modules>
 
     <dependencyManagement>
@@ -401,6 +402,21 @@
         </plugins>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>com.chiralbehaviors.CoRE</groupId>
+                    <artifactId>network-inference-generator</artifactId>
+                    <version>${project.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>com.chiralbehaviors.CoRE</groupId>
+                    <artifactId>mixin-generator</artifactId>
+                    <version>${project.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>build-helper-maven-plugin</artifactId>
+                    <version>1.8</version>
+                </plugin>
                 <plugin>
                     <artifactId>maven-plugin-plugin</artifactId>
                     <version>2.5.1</version>
