--- a/loader-plugin/pom.xml
+++ b/loader-plugin/pom.xml
@@ -91,6 +91,7 @@
                                         </versionRange>
                                         <goals>
                                             <goal>helpmojo</goal>
+                                            <goal>descriptor</goal>
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
