--- a/pom.xml
+++ b/pom.xml
@@ -394,7 +394,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.7.2</version>
                 <configuration>
                     <skipTests>true</skipTests>
                 </configuration>
@@ -402,6 +401,11 @@
         </plugins>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.17</version>
+                </plugin>
                 <plugin>
                     <groupId>com.chiralbehaviors.CoRE</groupId>
                     <artifactId>network-inference-generator</artifactId>
@@ -571,7 +575,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.7.2</version>
                         <configuration>
                             <skipTests>false</skipTests>
                             <argLine>-Xmx2024m -XX:MaxPermSize=256m</argLine>
