--- a/json/pom.xml
+++ b/json/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.chiralbehaviors.CoRE</groupId>
         <artifactId>CoRE.app</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.2-rc1</version>
     </parent>
     <artifactId>json</artifactId>
     <name>JSON serialization support</name>
@@ -86,7 +86,7 @@
                                             mixin-generator
                                         </artifactId>
                                         <versionRange>
-                                            [0.0.2-SNAPSHOT,)
+                                            [${project.version},)
                                         </versionRange>
                                         <goals>
                                             <goal>generate</goal>
