--- a/model/pom.xml
+++ b/model/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>CoRE.app</artifactId>
         <groupId>com.chiralbehaviors.CoRE</groupId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.2-rc1</version>
         <relativePath>..</relativePath>
     </parent>
 
@@ -387,7 +387,7 @@
                                     <pluginExecutionFilter>
                                         <groupId>com.chiralbehaviors.CoRE</groupId>
                                         <artifactId>network-inference-generator</artifactId>
-                                        <versionRange>[0.0.2-SNAPSHOT,)</versionRange>
+                                        <versionRange>[${project.version},)</versionRange>
                                         <goals>
                                             <goal>generate</goal>
                                         </goals>
