--- a/workspace-api/pom.xml
+++ b/workspace-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.chiralbehaviors.CoRE</groupId>
         <artifactId>CoRE.app</artifactId>
-        <version>0.0.2-rc1</version>
+        <version>0.0.2-rc2-SNAPSHOT</version>
     </parent>
     <artifactId>workspace-api</artifactId>
     <name>Workspace API</name>
