update version to rc2 release.  Tag.  Use childAssignTo in protocol testing.

--- a/animations/src/main/resources/com/chiralbehaviors/CoRE/jsp/jpa.properties
+++ b/animations/src/main/resources/com/chiralbehaviors/CoRE/jsp/jpa.properties
@@ -3,4 +3,4 @@ openjpa.ConnectionDriverName=org.postgresql.pljava.jdbc.SPIDriver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
 <property name="openjpa.jdbc.DBDictionary" value="postgres(StoreCharsAsNumbers=false)"/>
 #openjpa.Log=DefaultLevel=TRACE,SQL=TRACE
-openjpa.jdbc.TransactionIsolation=repeatable-read
+#openjpa.jdbc.TransactionIsolation=repeatable-read
