--- a/loader-plugin/pom.xml
+++ b/loader-plugin/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.chiralbehaviors.CoRE</groupId>
         <artifactId>CoRE.app</artifactId>
-        <version>0.0.2-rc2-SNAPSHOT</version>
+        <version>0.0.2-rc2</version>
     </parent>
     <artifactId>loader-plugin</artifactId>
     <packaging>maven-plugin</packaging>
