--- a/model/src/test/resources/jpa.properties
+++ b/model/src/test/resources/jpa.properties
@@ -3,4 +3,4 @@ openjpa.ConnectionPassword=${db.password}
 openjpa.ConnectionURL=jdbc:postgresql://${db.server}:${db.port}/${db.database}
 openjpa.ConnectionDriverName=org.postgresql.Driver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
-openjpa.jdbc.TransactionIsolation=repeatable-read
+#openjpa.jdbc.TransactionIsolation=repeatable-read
