--- a/configuration/pom.xml
+++ b/configuration/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>CoRE.app</artifactId>
 		<groupId>com.chiralbehaviors.CoRE</groupId>
-		<version>0.0.2-rc2</version>
+		<version>0.0.2-rc3-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>configuration</artifactId>
