Limit max JSP reentrant depth to 10.  Remove some unneeded functions. Add JSP to set the logging configuration of the current session.  Add module for default logging configuration for JSPs.  Initialize logback in JSP static initialization.

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
         <module>loader</module>
         <module>loader-plugin</module>
         <module>network-inference-generator</module>
+        <module>default-jsp-logging</module>
     </modules>
 
     <dependencyManagement>
