--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
         <module>loader-plugin</module>
         <module>network-inference-generator</module>
         <module>default-jsp-logging</module>
+        <module>workspace-generator</module>
     </modules>
 
     <dependencyManagement>
